--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
             <link rel="stylesheet" href="{{ asset('/css/main.css') }}">
+            <link rel="stylesheet" href="{{ asset('/css/jquery-ui.min.css') }}">
             <link rel='icon' href='/assets/favicon.ico' type='image/x-icon'/>
         {% endblock %}
     </head>
