--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -3,9 +3,10 @@
             <p><a href="https://github.com/DrakenXI/jeuxDeMotsInterface"><img src="/assets/GitHub-Light-32px.png" alt="Logo de GitHub"/></a> Projet réalisé dans le cadre de l'UE HMIN302.  &#169; C. Desgenetez et A. Paillard. En utilisant ce site, vous acceptez des cookies.</p>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="/scripts/chooseSearchMode.js"></script>
-        <script src="/scripts/search.js"></script>
-        <script src="/scripts/entriesUI.js"></script>
+        <script src="{{ asset('scripts/jquery-ui.min.js') }}"></script>
+        <script src="{{ asset('scripts/chooseSearchMode.js') }}"></script>
+        <script src="{{ asset('scripts/search.js') }}"></script>
+        <script src="{{ asset('scripts/entriesUI.js') }}"></script>
         <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
         <script>
             $(document).foundation();
