--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -20,7 +20,9 @@
             <section>
                 <h2>Recherche</h2>
                 <div class="row">
+                    <div class="ui-widget">
                         <input id="term" class="column large-3" type="text" placeholder="Je recherche le terme..." value="">
+                    </div>
                         <select id="search-mode" class="column large-3" onchange="setExplanationText()">
                             <option value="" disabled>--Choisir un mode de recherche--</option>
                             <option value="exacte">Exactement</option>
